# python-flask-apispec-server/swagger_server/__main__.py
@@ -8,7 +8,7 @@ from swagger_server import encoder
 def main():
     app = connexion.App(__name__, specification_dir='./swagger/')
     app.app.json_encoder = encoder.JSONEncoder
-    app.add_api('swagger.yaml', arguments={'title': 'Simple Inventory API'})
+    app.add_api('swagger.yaml', arguments={'title': 'Cesva Noise Observation API'})
     app.run(port=8080)
 
 
