# python-flask-apispec-server/swagger_server/models/__init__.py
@@ -3,5 +3,6 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from swagger_server.models.inventory_item import InventoryItem
-from swagger_server.models.manufacturer import Manufacturer
+from swagger_server.models.observation import Observation
+from swagger_server.models.sensor import Sensor
+from swagger_server.models.sensors import Sensors
