# python-flask-apispec-server/swagger_server/models/sensor.py
@@ -1,0 +1,92 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class Sensor(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, sensor: str=None, observations: List[Observation]=None):  # noqa: E501
+        """Sensor - a model defined in Swagger
+
+        :param sensor: The sensor of this Sensor.  # noqa: E501
+        :type sensor: str
+        :param observations: The observations of this Sensor.  # noqa: E501
+        :type observations: List[Observation]
+        """
+        self.swagger_types = {
+            'sensor': str,
+            'observations': List[Observation]
+        }
+
+        self.attribute_map = {
+            'sensor': 'sensor',
+            'observations': 'observations'
+        }
+
+        self._sensor = sensor
+        self._observations = observations
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Sensor':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Sensor of this Sensor.  # noqa: E501
+        :rtype: Sensor
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def sensor(self) -> str:
+        """Gets the sensor of this Sensor.
+
+
+        :return: The sensor of this Sensor.
+        :rtype: str
+        """
+        return self._sensor
+
+    @sensor.setter
+    def sensor(self, sensor: str):
+        """Sets the sensor of this Sensor.
+
+
+        :param sensor: The sensor of this Sensor.
+        :type sensor: str
+        """
+        if sensor is None:
+            raise ValueError("Invalid value for `sensor`, must not be `None`")  # noqa: E501
+
+        self._sensor = sensor
+
+    @property
+    def observations(self) -> List[Observation]:
+        """Gets the observations of this Sensor.
+
+
+        :return: The observations of this Sensor.
+        :rtype: List[Observation]
+        """
+        return self._observations
+
+    @observations.setter
+    def observations(self, observations: List[Observation]):
+        """Sets the observations of this Sensor.
+
+
+        :param observations: The observations of this Sensor.
+        :type observations: List[Observation]
+        """
+
+        self._observations = observations
